[package]
name = "eth-cli"
version = "0.1.0"
edition = "2024"
description = "Eth cli tool"
license = "MIT"
repository = "https://github.com/yourusername/tool-name"


[dependencies]
ethers = "2"
clap = { version = "4.4", features = ["derive"] }
rustyline = "12"
tokio = { version = "1", features = ["full"] }
